--- a/ProyectoGestiónEscolar/CapaNegocios/CapaNegocios.csproj
+++ b/ProyectoGestiónEscolar/CapaNegocios/CapaNegocios.csproj
@@ -45,10 +45,12 @@
     <Compile Include="NCarrera.cs" />
     <Compile Include="NCiclo.cs" />
     <Compile Include="NDepartamento.cs" />
+    <Compile Include="NEmpleado.cs" />
     <Compile Include="NEncargado.cs" />
     <Compile Include="NGrado.cs" />
     <Compile Include="NInscripcion.cs" />
     <Compile Include="NMunicipio.cs" />
+    <Compile Include="NPuesto.cs" />
     <Compile Include="NSeccion.cs" />
     <Compile Include="NTipo_Encargado.cs" />
     <Compile Include="NTipo_Inscripcion.cs" />
